[gd_scene load_steps=3 format=3 uid="uid://bbr5s34getyn"]

[ext_resource type="Script" path="res://addons/eh_jogos.utilities/test_scenes/Shaker2D/DebugControls.gd" id="1"]
[ext_resource type="Script" path="res://addons/eh_jogos.utilities/test_scenes/Shaker2D/TimeScale.gd" id="2"]

[node name="TraumaDebugControls" type="VBoxContainer"]
anchor_right = 1.0
offset_left = 386.0
offset_top = 13.0
offset_right = -24.0
offset_bottom = 71.0
script = ExtResource("1")
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeScaleLine" type="HBoxContainer" parent="."]
offset_right = 1510.0
offset_bottom = 16.0

[node name="TimeScale" type="Label" parent="TimeScaleLine"]
offset_top = 1.0
offset_right = 250.0
offset_bottom = 15.0
minimum_size = Vector2(250, 0)
text = "time scale: 0.00 "
script = ExtResource("2")

[node name="TimeScaleSlider" type="HSlider" parent="TimeScaleLine"]
offset_left = 254.0
offset_right = 1510.0
offset_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 5.0
step = 0.01
value = 1.0

[node name="TraumaCenter" type="HBoxContainer" parent="."]
offset_top = 20.0
offset_right = 1510.0
offset_bottom = 40.0
custom_constants/separation = 15

[node name="TraumaSmall" type="Button" parent="TraumaCenter"]
offset_right = 493.0
offset_bottom = 20.0
size_flags_horizontal = 3
text = "add 0.3 trauma"

[node name="TraumaMedium" type="Button" parent="TraumaCenter"]
offset_left = 508.0
offset_right = 1001.0
offset_bottom = 20.0
size_flags_horizontal = 3
text = "add 0.6 trauma"

[node name="TraumaBig" type="Button" parent="TraumaCenter"]
offset_left = 1016.0
offset_right = 1510.0
offset_bottom = 20.0
size_flags_horizontal = 3
text = "add 1.0 trauma"

[connection signal="value_changed" from="TimeScaleLine/TimeScaleSlider" to="." method="_on_TimeScaleSlider_value_changed"]
[connection signal="value_changed" from="TimeScaleLine/TimeScaleSlider" to="TimeScaleLine/TimeScale" method="_on_TimeScaleSlider_value_changed"]
[connection signal="pressed" from="TraumaCenter/TraumaSmall" to="." method="_on_TraumaSmall_pressed"]
[connection signal="pressed" from="TraumaCenter/TraumaMedium" to="." method="_on_TraumaMedium_pressed"]
[connection signal="pressed" from="TraumaCenter/TraumaBig" to="." method="_on_TraumaBig_pressed"]
